@@ -1,3 +1,9 @@
+2009-08-11  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* reload.c (find_reloads_subreg_address): Check the original
+	req_equiv_mem address to detect the case where an address is
+	not valid in the outer mode.
+
 2009-08-11  Richard Guenther  <rguenther@suse.de>
         
         PR bootstrap/40788
